--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
 [project]
 name = "fishmlserv"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "fastapi>=0.112.2",
+    "uvicorn[standard]>=0.30.6",
+]
 requires-python = "==3.8.*"
 readme = "README.md"
 license = {text = "MIT"}
