--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
 ]
 dependencies = [
+    "requests>=2.32.3",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
