--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "fishmlserv"
-version = "0.8.4"
+version = "0.8.5"
 description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
 ]
 dependencies = [
     "requests>=2.32.3",
+    "typer>=0.12.5",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -16,6 +17,7 @@ license = {text = "MIT"}
 [project.scripts]
 get-model-path = 'fishmlserv.cli:print_path'
 prediction = 'fishmlserv.cli2:app'
+pre = 'fishmlserv.cli3:run_main'
 
 [tool.pdm]
 distribution = false
