--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fishmlserv"
-version = "0.8.5"
+version = "0.8.6"
 description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
@@ -9,7 +9,7 @@ dependencies = [
     "requests>=2.32.3",
     "typer>=0.12.5",
 ]
-requires-python = ">=3.8"
+requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
 
