--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fishmlserv"
-version = "0.8.6"
+version = "0.8.8"
 description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
 authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
@@ -16,8 +16,7 @@ license = {text = "MIT"}
 
 [project.scripts]
 get-model-path = 'fishmlserv.cli:print_path'
-prediction = 'fishmlserv.cli2:main'
-pre = 'fishmlserv.cli3:run_main'
+prediction = 'fishmlserv.cli2:run_main'
 
 [tool.pdm]
 distribution = false
