--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ license = {text = "MIT"}
 [project.scripts]
 get-model-path = 'fishmlserv.cli:print_path'
 prediction = 'fishmlserv.cli2:run_main'
-
+pred = 'fishmlserv.cli3:app'
 [tool.pdm]
 distribution = false
 
