--- a/LB/default.conf
+++ b/LB/default.conf
@@ -6,8 +6,8 @@ upstream ml_servers {
 server {
     listen 80;
     
-    location / {
-        proxy_pass http://ml_servers
+    location /{
+        proxy_pass http://ml_servers;
     }
 
 }
