--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
 ]
 dependencies = [
+    "scikit-learn>=1.5.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
